Refactor knowledge graph services and enhance document unit handling